# knittingCrab

./: .cursorrules  .local-ci.yml  .pre-commit-config.yaml  AGENTS.md  AIVCS_SESSION_SPEC.md  ARCHITECTURE.md  ARCHITECTURE_UPDATE_SUMMARY.md  CHANGELOG.md  CI.md  CLAUDE.md  Cargo.toml  GEMINI.md  IMPLEMENTATION.md  LOCAL_CI_SETUP.md  LOCAL_CI_VERIFICATION.md  NIX_SETUP.md  README.md  SCHEDULER_INTEGRATION.md  dockworker.toml  flake.nix
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md  system-instruction.md
.github/workflows/: ci.yml
crates/agent/: Cargo.toml
crates/agent/src/: budget.rs  goal_lock.rs  lib.rs  test_gate.rs
crates/aivcs-session/: Cargo.toml
crates/aivcs-session/src/: lib.rs  main.rs  remote.rs  session.rs
crates/cache/: Cargo.toml
crates/cache/src/: cache_key.rs  lib.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: cache_index.rs  error.rs  lib.rs  main.rs  node_registry.rs  server.rs  ssh_health.rs  state.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  aivcs_ledger.rs  backpressure_integration.rs  circuit_breaker.rs  error.rs  event.rs  event_log.rs  execution_location.rs  heartbeat.rs  ids.rs  lease.rs  lib.rs  persistent_lease.rs  priority.rs  priority_inversion.rs  priority_queue.rs  queue_backpressure.rs  resource.rs  retry.rs  task_aging.rs  task_timeout.rs  time_slice_scheduler.rs  traits.rs
crates/core/tests/: fairness_integration.rs
crates/node/: Cargo.toml
crates/node/src/: connection.rs  error.rs  lib.rs  network_cache.rs  network_event_sink.rs  network_lease_store.rs  network_queue.rs  worker_node.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: dag.rs  gatekeeper.rs  lib.rs  soak_test.rs  stub.rs
crates/transport/: Cargo.toml
crates/transport/src/: error.rs  framing.rs  lib.rs  messages.rs
crates/worker/: Cargo.toml
crates/worker/src/: cancel_token.rs  dispatching_executor.rs  error.rs  fake_session_manager.rs  fake_worker.rs  lease_manager.rs  lib.rs  process.rs  remote_executor.rs  retry_handler.rs  ssh_tmux_executor.rs  worker_runtime.rs
crates/worker/tests/: reaper_bug.rs  regression_deadlock.rs
crates/worker/tests/component/: convergence_tests.rs  log_tests.rs  recovery_tests.rs
crates/worker/tests/integration/: subprocess_tests.rs
crates/worker/tests/unit/: cancel_tests.rs  lease_tests.rs  retry_tests.rs
examples/: promotion-gate-task.yaml
kustomize/: README.md
kustomize/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
kustomize/overlays/dev/: kustomization.yaml
kustomize/overlays/prod/: kustomization.yaml
src/: artifact_index.rs  cache.rs  cache_key.rs  cached_runner.rs  cancellation.rs  dag.rs  error.rs  heartbeat.rs  lease.rs  lib.rs  policy.rs  repo_lock.rs  resource_model.rs  resources.rs  runner.rs  scheduler.rs  shard.rs  types.rs  work_item.rs  worker.rs  worktree.rs
tests/: component.rs  integration_tests.rs  workspace_component.rs
