[package]
name = "knitting-crab"
version = "0.1.0"
edition = "2021"
description = "Resource-aware scheduler for local autonomous agent workloads on Apple Silicon"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.6"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
dashmap = "5"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
