[workspace]
members = [
    "crates/core",
    "crates/worker",
    "crates/scheduler",
    "crates/transport",
    "crates/coordinator",
    "crates/node",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
dashmap = "5"
nix = { version = "0.27", features = ["signal", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
proptest = "1"
tokio-test = "0.4"
tracing-subscriber = "0.3"
sha2 = "0.10"
parking_lot = "0.12"
rusqlite = { version = "0.30", features = ["bundled", "chrono"] }
anyhow = "1.0"

[workspace.lints.rust]
warnings = "deny"
unsafe_code = "deny"
