[package]
name = "knitting-crab-agent"
version.workspace = true
edition.workspace = true

[dependencies]
knitting-crab-core = { path = "../core" }
tokio = { workspace = true, features = ["process"] }
async-trait = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
