[package]
name = "aivcs-session"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
shell-escape = "0.1"
async-trait = { workspace = true }
knitting-crab-core = { path = "../core" }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
