[package]
name = "aivcs-session"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
clap = { version = "4", features = ["derive"] }
knitting-crab-core = { path = "../core" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
shell-escape = "0.1"

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
