[package]
name = "knitting-crab-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
knitting-crab-core = { path = "../core" }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
