[package]
name = "knitting-crab-worker"
version.workspace = true
edition.workspace = true

[dependencies]
knitting-crab-core = { path = "../core" }
knitting-crab-scheduler = { path = "../scheduler" }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
